style.css
.wrapper {
    width: 1020px;
    height: 1095px;
    margin: 0 auto;
    position: relative;
}

.header {
    width: 1020px;
    height: 89px;
    display: flex;
    position: fixed;
    justify-content: space-between;
    align-items: center;
    background-color: #2d303a;
    z-index: 2;
}


.header__logo {
    font-size: 25px;
    line-height: 6px;
    color: #ffffff;
    font-family: "Lato",sans-serif;
    font-weight: 700;
    margin-left: 40px;
    padding-bottom: 1px;
    text-transform: uppercase;
}

.header__logo span {
    color: #f06c64;
}

.navigation {
    display: flex;
    margin-top: 10px;
    margin-right: 40px; 
   
}

.navigation__link {
    font-size: 8.65655pt;
    line-height: 6px;
    font-family: "Lato",sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    color: #ffffff;
    text-decoration: none;
}

.navigation__link:hover {
    cursor: pointer;
    color: rgba(240, 108, 100, 255);
    transition: all .3s ease-out;
}

.navigation__item::after {
    content: "•";
    padding-right: 12px;
    padding-left: 12px;
    color: #3c404f
    
}

.navigation__item:last-child::after {
    content: none;
}

.active-link {
    font-size: 8.65655pt;
    line-height: 6px;
    font-family: "Lato",sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    text-decoration: none;
    color: rgba(240, 108, 100, 255);
}

.header__bottom {
    width: 1020px;
    height: 6px;
    background-color: #323746;
   
}

.slider {
    width: 1020px;
    height: 594px;
    position: relative;
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: #f06c64;
    overflow: hidden;
    margin-top: 83px;
}

.slider__bottom {
    display: none;
    width: 1020px;
    height: 6px;
    background-color: #ea676b;
   
}

.slide-first {
    position: absolute;
    left: 0px;
    bottom: 0px; 
    z-index: 0;
    transition: all .5s ease;
}

.slide-second {
    position: absolute;
    left: 0px;
    bottom: 0px; 
    z-index: 0;
    transition: all .5s ease;
}

.show-slide {
    opacity: 1;
   
}

.hide-slide {
    opacity: 0;
}

.home__btn {
    width: 40px;
    height: 40px;
    display: block;
    position: absolute;
    cursor: pointer;
    left: 478px;
    bottom: 75px;
    border-radius: 50%;
    z-index: 1;

}

.home__btn_ver {
    width: 40px;
    height: 40px;
    display: block;
    position: absolute;
    cursor: pointer;
    left: 200px;
    bottom: 97px;
    border-radius: 50%;
    z-index: 1;

}

.home__btn_gor {
    width: 40px;
    height: 40px;
    display: block;
    position: absolute;
    left: 435px;
    bottom: 295px;
    border-radius: 50%;
    cursor: pointer;
    z-index: 1;
   
}

.black-screen {
    width: 200px;
    height: 354px;
    display: block;
    position: absolute;
    left: 398px;
    bottom: 128px;
    background-color: #131313;
    transition: all .5s ease;
    z-index: 1;
}

.black-screen__ver {
    width: 188px;
    height: 333px;
    display: block;
    position: absolute;
    left: 126px;
    bottom: 148px;
    background-color: #131313;
    transition: all .5s ease;
    z-index: 1;
}

.black-screen__gor {
    width: 333px;
    height: 189px;
    display: block;
    position: absolute;
    left: 485px;
    bottom: 221px;
    background-color: #131313;
    transition: all .5s ease;
    z-index: 1;
}

.hide {
    display: none;
}



.slider__phone_ver {
    position: absolute;
    bottom: 83px;
    left: 110px;
    z-index: 0;
    border-radius: 20px;
}

.slider__phone_ver:hover {
    cursor: pointer;
}

.slider__phone_gor {
    position: absolute;
    bottom: 204px;
    left: 426px;
    z-index: 0;
    border-radius: 20px;
 }

.slider__shadow_ver {
    position: absolute;
    top: 54px;
    left: 112px;
    z-index: 0;
}

.slider__shadow_gor {
    position: absolute;
    top: 174px;
    left: 427px;
    z-index: 0;
}

.slider__btn_left {
    position: absolute;
    top: 281px;
    left: 42px;
    opacity: 0.7;
    z-index: 1;
    
}

.slider__btn_left:hover {
    width: 20px;
    height: 30px;
    opacity: 1;
    cursor: pointer;
    transition: all .1s ease-out;
}

.slider__btn_right {
    position: absolute;
    opacity: 0.7;
    top: 281px;
    right: 40px;
    z-index: 1;
    
}

.slider__btn_right:hover {
    width: 20px;
    height: 30px;
    opacity: 1;
    cursor: pointer;
    transition: all .1s ease-out;
}

.service {
    width: 1020px;
    height: 496px;
    background-color: #f2f2f2;
}

.service__bottom {
    width: 1020px;
    height: 4px;
    background-color: #ffffff;
}
.service__container {
    width: 938px;
    height: 300px;
    padding-top: 45px;
    padding-left: 41px;
    display: flex;
   
}

.service__title {
    margin-left: 40px;
    padding-top: 68px;
    font-size: 30px;
    line-height: 18px;
    color: #666d89;
    font-family: "Lato",sans-serif;
    font-weight: 900;
    text-align: left;
}

.service__description {
    margin-left: 40px;
    padding-top: 27px;
    font-size: 18px;
    line-height: 30px;
    color: #767e9e;
    font-family: "Lato",sans-serif;
    font-weight: 300;
    text-align: left;
}

.service__column_first {
    width: 312px;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.service__column_second {
    width: 312px;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding-left: 11px;
}

.service__column_third {
    width: 312px;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.custom {
    height: 120px;
    display: flex;
    position: relative;
    margin-bottom: 4px;
}

.custom__icon {
    width: 33px;
    height: 33px;
    position: absolute;
    top: 16px;
    left: 14px;
}

.custom__ellipse {
    position: absolute;
    top: 1px;
   
}

.custom h3 {
    position: absolute;
    left: 80px;
    font-size: 18px;
    line-height: 18px;
    color: #666d89;
    font-family: "Lato",sans-serif;
    font-weight: 900;
    text-align: left;
}
/* ... */

